# affine_cat

./: Cargo.toml  README.md
agda/: AbsorbEnv.agda  Comonoid.agda  FinishPair.agda  FoldEnv.agda  FoldMooreRetract.agda  GapClock.agda  Hylo.agda  Machine.agda  MooreComonad.agda  Order.agda  README.md  ScopedAbsorb.agda  TwoAbsorb.agda
benches/: dyn_fence.rs
derive/: Cargo.toml
derive/src/: lib.rs
examples/: arena.rs  calc.rs  calc2.rs  featurize.rs  hylo.rs  logstats.rs  mutual.rs  rewrite.rs  walls.rs  xml_filters.rs
src/: base.rs  cata.rs  cps.rs  data.rs  lib.rs  machines.rs  ringy.rs  weighted.rs
tests/: readme.rs  witnesses.rs
