[package]
repository = "https://github.com/Lambda-Logan/affine_cat"
name = "affine-cat"
version = "0.2.0"
edition = "2021"
readme = "README.md"
license = "MPL-2.0"
rust-version = "1.80"
description = "Category theory native to Rust's affine, monoidal reality: lawful duplication, graded functors, box-free applicatives, Moore-machine wiring, mutation-as-lens, and law-first recursion schemes (derive + Agda-mechanized driver disciplines)."
keywords = ["category-theory", "recursion-schemes", "affine", "state-machine", "zero-cost"]
categories = ["data-structures", "rust-patterns", "no-std"]

[features]
default = ["std"]
std = []

[dependencies]

[package.metadata.docs.rs]
all-features = true

#[dev-dependencies]
#affine-cat-derive = { path = "derive", version = "0.2.0" }

[[bench]]
name = "dyn_fence"
harness = false


[workspace]
members = [".", "derive"]
